--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+    <meta name="description" content="Portfolio webpage of Momin Tahir" />
     <meta
       name="keywords"
       content="portfolio,website,personal website,github,projects,computer science and engineering"
     />
-    <meta name="author" content="Vinay Somawat" />
+    <meta name="author" content="Momin Tahir" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -52,7 +52,7 @@
             <div class="author-img">
               <img alt="profile-img" src="./logo.png" />
             </div>
-            <h1 id="colorlib-logo"><a href="./index.html">Vinay Somawat</a></h1>
+            <h1 id="colorlib-logo"><a href="./index.html">Momin Tahir</a></h1>
           </div>
           <nav
             id="colorlib-main-menu"
@@ -115,7 +115,7 @@
                     <div class="stack-card" user-id="8461233"></div>
                   </div>
                   <div class="col">
-                    <div class="github-card" username="vinaysomawat"></div>
+                    <div class="github-card" username="momintahir"></div>
                   </div>
                 </div>
               </div>
@@ -129,7 +129,7 @@
               >
                 <div class="about-desc">
                   <a
-                    href="https://github.com/vinaysomawat"
+                    href="https://github.com/momintahir"
                     target="_blank"
                     style="color: inherit"
                   >
@@ -254,7 +254,7 @@
                   <h1>Contact</h1>
                 </div>
                 <p>
-                  Feel free to email me at <strong>vinaysomawat40@gmail.com</strong> for tech
+                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
                   discussions, business opportunities, or just to say hello—I’d
                   love to hear from you!
                 </p>
