--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id="navbar" class="collapse">
               <ul>
                 <li><a href="#" data-nav-section="about">About</a></li>
-                <li><a href="#" data-nav-section="skills">Skills</a></li>
+                <li><a href="#" data-nav-section="skills">Technical Skills</a></li>
                 <li>
                   <a href="#" data-nav-section="repos">Top Repositories</a>
                 </li>
@@ -98,7 +98,7 @@
                 data-animate-effect="fadeInLeft"
               >
                 <div class="about-desc">
-                  <h1>Skills</h1>
+                  <h1>Technical Skills</h1>
                 </div>
               </div>
               <div id="skills" class="row"></div>
@@ -129,7 +129,7 @@
               >
                 <div class="about-desc">
                   <a
-                    href="https://github.com/vinaysomawat"
+                    href="https://github.com/momintahir"
                     target="_blank"
                     style="color: inherit"
                   >
@@ -254,7 +254,7 @@
                   <h1>Contact</h1>
                 </div>
                 <p>
-                  Feel free to email me at <strong>vinaysomawat40@gmail.com</strong> for tech
+                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
                   discussions, business opportunities, or just to say hello—I’d
                   love to hear from you!
                 </p>
