update text colors

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     style="color: inherit"
                   >
                     <h1>
-                      Top <span style="color: #f9bf3f">Repositories</span>
+                      Top <span style="color: #7f52ff">Repositories</span>
                       <i
                         class="fa fa-external-link"
                         aria-hidden="true"
@@ -172,7 +172,7 @@
                     style="color: inherit"
                   >
                     <h1>
-                      Latest <span style="color: #f9bf3f">Blogs</span>
+                      Latest <span style="color: #7f52ff">Blogs</span>
                       <i
                         class="fa fa-external-link"
                         aria-hidden="true"
@@ -209,7 +209,7 @@
                 data-animate-effect="fadeInLeft"
               >
                 <div class="about-desc">
-                  <h1>Work <span style="color: #f9bf3f">Experience</span></h1>
+                  <h1>Work <span style="color: #7f52ff">Experience</span></h1>
                 </div>
               </div>
               <div class="timeline-centered" id="experience"></div>
