update text colors

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="author-img">
               <img alt="profile-img" src="./logo.png" />
             </div>
-            <h1 id="colorlib-logo"><a href="./index.html">Momin Tahir</a></h1>
+            <h1 id="colorlib-logo" style="color: #ffffff;"><a href="./index.html">Momin Tahir</a></h1>
           </div>
           <nav
             id="colorlib-main-menu"
@@ -62,20 +62,20 @@
           >
             <div id="navbar" class="collapse">
               <ul>
-                <li><a href="#" data-nav-section="about">About</a></li>
-                <li><a href="#" data-nav-section="skills">Technical Skills</a></li>
-                <li>
+                <li style="color: #ffffff;"><a href="#" data-nav-section="about">About</a></li>
+                <li style="color: #ffffff;"><a href="#" data-nav-section="skills">Technical Skills</a></li>
+                <li style="color: #ffffff;">
                   <a href="#" data-nav-section="repos">Top Repositories</a>
                 </li>
-                <li><a href="#" data-nav-section="blogs">Blogs</a></li>
-                <li>
+                <li style="color: #ffffff;"><a href="#" data-nav-section="blogs">Blogs</a></li>
+                <li style="color: #ffffff;">
                   <a href="#" data-nav-section="experience">Work Experience</a>
                 </li>
-                <li>
+                <li style="color: #ffffff;">
                   <a href="#" data-nav-section="trekking">Trekking</a>
                 </li>
-                <li><a href="#" data-nav-section="education">Education</a></li>
-                <li><a href="#" data-nav-section="contact">Contact</a></li>
+                <li style="color: #ffffff;"><a href="#" data-nav-section="education">Education</a></li>
+                <li style="color: #ffffff;"><a href="#" data-nav-section="contact">Contact</a></li>
               </ul>
             </div>
           </nav>
