--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <ul
                     id="repos"
                     class=""
-                    style="display: block; padding: 10px"
+                    style="display: block; padding: 10px; color: #ffffff"
                   ></ul>
                 </li>
               </ul>
