add title color

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 data-animate-effect="fadeInLeft"
               >
                 <div class="about-desc">
-                  <h1>Technical Skills</h1>
+                  <h1>Technical <span style="color: #7f52ff">Skills</span></h1>
                 </div>
               </div>
               <div id="skills" class="row"></div>
