--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <li style="color: #ffffff;">
                   <a href="#" data-nav-section="experience">Work Experience</a>
                 </li>
+                <li style="color: #ffffff;">
+                                <a href="#" data-nav-section="trekking">Trekking</a>
+                              </li>
                 <li style="color: #ffffff;"><a href="#" data-nav-section="education">Education</a></li>
                 <li style="color: #ffffff;"><a href="#" data-nav-section="contact">Contact</a></li>
               </ul>
@@ -212,6 +215,22 @@
               <div class="timeline-centered" id="experience"></div>
             </div>
           </section>
+          <section class="colorlib-skills" data-section="trekking">
+                   <div class="colorlib-narrow-content">
+                     <div
+                       class="row row-bottom-padded-sm animate-box"
+                       data-animate-effect="fadeInLeft"
+                     >
+                       <div class="about-desc">
+                         <h1>
+                           Trekking <span style="color: #f9bf3f">Adventures</span>
+                         </h1>
+                         <p>Here are the treks I’ve explored so far:</p>
+                         <div id="trekking" class="row"></div>
+                       </div>
+                     </div>
+                   </div>
+                 </section>
           <section class="colorlib-education" data-section="education">
             <div class="colorlib-narrow-content">
               <div
