adding resume button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <div id="bio"></div>
+                  <div className="button-greeting-div">
+                    <Button text="Contact me" href="#contact" />
+                    {greeting.resumeLink && (
+                      <a
+                        href={require("./resume.pdf")}
+                        download="Resume.pdf"
+                        className="download-link-button"
+                      >
+                        <Button text="Download my resume" />
+                      </a>
+                    )}
+                  </div>
                 </div>
               </div>
             </div>
