adding two buttons color

--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                    <button class="custom-button">Contact Me</button>
-                    <button class="custom-button">Download My Resume</button>
+                    <button class="custom-button">CONTACT ME</button>
+                    <button class="custom-button">DOWNLOAD MY RESUME</button>
                   </div>
-
                 </div>
               </div>
             </div>
