add resume link and file

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                   <div id="bio"></div>
                   <div class="button-container">
                     <button class="custom-button">CONTACT ME</button>
-                    <button class="custom-button">DOWNLOAD MY RESUME</button>
+                    
+                    <button
+                        a href="Momin-Tahir-Resume.pdf"
+                        class="custom-button" >DOWNLOAD MY RESUME</button>
                   </div>
                 </div>
               </div>
