add resume link and file

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     <button class="custom-button">CONTACT ME</button>
                     
                     <button
-                        a href="Momin-Tahir-Resume.pdf"
-                        class="custom-button" >DOWNLOAD MY RESUME</button>
+                        a href="resume.pdf"
+                        class="custom-button">DOWNLOAD MY RESUME</button>
                   </div>
                 </div>
               </div>
