add resume link and file

--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                    <button class="custom-button">CONTACT ME</button>
+                      <button class="custom-button">
+                          <a href="#" data-nav-section="contact">
+                              CONTACT ME
+                              </a>
+                      </button>
                     
                     <button
                         a href="resume.pdf"
