--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                      <button class="custom-button">
-                          <a href="#" data-nav-section="contact">
-                              CONTACT ME
-                              </a>
-                      </button>
+                      <a href="#" data-nav-section="contact">
+                          <button class="custom-button">CONTACT ME</button>
+                      </a>
                     
                     <button
                         a href="resume.pdf"
