--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                      <a href="#" data-nav-section="contact">
-                          <button class="custom-button">CONTACT ME</button>
-                      </a>
-                    
+                          <button class="custom-button">
+                              <a href="#" data-nav-section="contact">
+                              CONTACT ME</a></button>
                     <button
                         a href="resume.pdf"
                         class="custom-button">DOWNLOAD MY RESUME</button>
