add resume link and file

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                          <button class="custom-button">
-                              <a href="#" data-nav-section="contact">
-                              CONTACT ME</a></button>
+                              <li style="color: #ffffff;"><a href="#" data-nav-section="contact">
+                                  <button class="custom-button">
+                                  Contact</button> </a></li>
                     <button
                         a href="resume.pdf"
                         class="custom-button">DOWNLOAD MY RESUME</button>
