add resume link and file

--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                              <li style="color: #ffffff;"><a href="#" data-nav-section="contact">
-                                  <button class="custom-button">
-                                  Contact</button> </a></li>
+                        <button class="custom-button" data-nav-section="contact">Contact</button>
                     <button
                         a href="resume.pdf"
                         class="custom-button">DOWNLOAD MY RESUME</button>
