--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <a href="https://stackoverflow.com" target="_blank" class="icon stackoverflow" title="Stack Overflow"></a>
                     </div>
 
-                    <script src="script.js"></script>
+                    <script src="main.js"></script>
                   </body>
                   
                   
