--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   </div>
                   
                   <body>
-                    <div class="icon-container">
+                    <div class="icon-container" style="padding-top: 20px;">
                       <a href="https://github.com" target="_blank" class="icon github" title="GitHub"></a>
                       <a href="https://linkedin.com" target="_blank" class="icon linkedin" title="LinkedIn"></a>
                       <a href="mailto:example@example.com" class="icon email" title="Email"></a>
