adjust github icon

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <h1>About</h1>
                   <div id="bio"></div>
                   <div class="button-container">
-                        <button class="custom-button" data-nav-section="contact">Contact</button>
+                        <button class="custom-button" data-nav-section="contact">CONTACT</button>
                     <button
                         a href="resume.pdf"
                         class="custom-button">DOWNLOAD MY RESUME</button>
@@ -93,12 +93,12 @@
                   
                   <body>
                     <div class="icon-container" style="padding-top: 20px;">
-                      <a href="https://gitlab.com" target="_blank" class="icon gitlab" title="GitLab"></a>
-                      <a href="https://linkedin.com" target="_blank" class="icon linkedin" title="LinkedIn"></a>
-                      <a href="mailto:example@example.com" class="icon email" title="Email"></a>
-                      <a href="https://facebook.com" target="_blank" class="icon facebook" title="Facebook"></a>
-                      <a href="https://medium.com" target="_blank" class="icon medium" title="Medium"></a>
-                      <a href="https://stackoverflow.com" target="_blank" class="icon stackoverflow" title="Stack Overflow"></a>
+                      <a href="https://github.com/momintahir" target="_blank" class="icon github" title="GitHub"></a>
+                      <a href="https://www.linkedin.com/in/momin-tahir/" target="_blank" class="icon linkedin" title="LinkedIn"></a>
+                      <a href="mailto:momintahir7@gmail.com" class="icon email" title="Email"></a>
+                      <a href="https://www.facebook.com/momin.tahir17/" target="_blank" class="icon facebook" title="Facebook"></a>
+                      <a href="https://medium.com/@momintahir7" target="_blank" class="icon medium" title="Medium"></a>
+                      <a href="https://stackoverflow.com/users/7854698/momin-tahir" target="_blank" class="icon stackoverflow" title="Stack Overflow"></a>
                     </div>
 
                     <script src="main.js"></script>
