--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <div id="bio"></div>
-                  <div class="button-container">
+                  <div class="button-container" id="contactButton">
                         <button class="custom-button" data-nav-section="contact">CONTACT</button>
                     <button
                         a href="resume.pdf"
