adding scroll effect for contact button

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <div id="bio"></div>
-                  <div class="button-container" id="contactButton">
-                        <button class="custom-button" data-nav-section="contact">CONTACT</button>
+                  <div class="button-container">
+                        <button class="custom-button" data-nav-section="contact" id="contactButton">CONTACT</button>
                     <button
                         a href="resume.pdf"
                         class="custom-button">DOWNLOAD MY RESUME</button>
