adding scroll effect for contact button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <div class="button-container">
                         <button class="custom-button" data-nav-section="contact" id="contactButton">CONTACT</button>
                     <button
-                        a href="resume.pdf"
+                        onclick="downloadResume()"
                         class="custom-button">DOWNLOAD MY RESUME</button>
                   </div>
                   
