--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
           </section>
           <section class="colorlib-contact" data-section="contact">
-            <div class="colorlib-narrow-content">
+            <div class="colorlib-narrow-content" id = "contact">
               <div
                 class="row row-bottom-padded-sm animate-box"
                 data-animate-effect="fadeInLeft"
