--- a/index.html
+++ b/index.html
@@ -280,17 +280,23 @@
                 <div class="about-desc">
                   <h1>Contact</h1>
                 </div>
-                <p>
-                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
-                  discussions, business opportunities, or just to say hello—I’d
-                  love to hear from you!
-                </p>
+<!--                <p>-->
+<!--                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech-->
+<!--                  discussions, business opportunities, or just to say hello—I’d-->
+<!--                  love to hear from you!-->
+<!--                </p>-->
               </div>
             </div>
           </section>
           <section class="colorlib-footer no-print" data-section="footer">
             <div class="colorlib-narrow-content">
-              <footer class="footer" id="footer"></footer>
+                <footer class="footer" id="footer">
+                    <p>
+                      Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
+                      discussions, business opportunities, or just to say hello—I’d
+                      love to hear from you!
+                    </p>
+                </footer>
             </div>
           </section>
         </div>
