--- a/index.html
+++ b/index.html
@@ -279,22 +279,18 @@
               >
                 <div class="about-desc">
                   <h1>Contact</h1>
-<!--                <p>-->
-<!--                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech-->
-<!--                  discussions, business opportunities, or just to say hello—I’d-->
-<!--                  love to hear from you!-->
-<!--                </p>-->
+                </div>
+                <p>
+                  Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
+                  discussions, business opportunities, or just to say hello—I’d
+                  love to hear from you!
+                </p>
+              </div>
             </div>
           </section>
           <section class="colorlib-footer no-print" data-section="footer">
             <div class="colorlib-narrow-content">
-                <footer class="footer" id="footer">
-                    <p>
-                      Feel free to email me at <strong>momintahir7@gmail.com</strong> for tech
-                      discussions, business opportunities, or just to say hello—I’d
-                      love to hear from you!
-                    </p>
-                </footer>
+              <footer class="footer" id="footer"></footer>
             </div>
           </section>
         </div>
