--- a/index.html
+++ b/index.html
@@ -290,7 +290,21 @@
           </section>
           <section class="colorlib-footer no-print" data-section="footer">
             <div class="colorlib-narrow-content">
-              <footer class="footer" id="footer"></footer>
+                <footer class="footer" id="footer">
+                    
+                    <body>
+                      <div class="icon-container" style="padding-top: 20px;">
+                        <a href="https://github.com/momintahir" target="_blank" class="icon github" title="GitHub"></a>
+                        <a href="https://www.linkedin.com/in/momin-tahir/" target="_blank" class="icon linkedin" title="LinkedIn"></a>
+                        <a href="mailto:momintahir7@gmail.com" class="icon email" title="Email"></a>
+                        <a href="https://www.facebook.com/momin.tahir17/" target="_blank" class="icon facebook" title="Facebook"></a>
+                        <a href="https://medium.com/@momintahir7" target="_blank" class="icon medium" title="Medium"></a>
+                        <a href="https://stackoverflow.com/users/7854698/momin-tahir" target="_blank" class="icon stackoverflow" title="Stack Overflow"></a>
+                      </div>
+
+                      <script src="main.js"></script>
+                    </body>
+                </footer>
             </div>
           </section>
         </div>
