adding projects section

--- a/index.html
+++ b/index.html
@@ -203,7 +203,14 @@
             </div>
           </section>
           
-          <title>Big Projects</title>
+          <h1>
+            Big <span style="color: #7f52ff">Projects</span>
+            <i
+              class="fa fa-external-link"
+              aria-hidden="true"
+              style="font-size: 30px"
+            ></i>
+          </h1>
               <style>
                   body {
                       font-family: Arial, sans-serif;
