adding projects section

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                       <h2>SOME STARTUPS AND COMPANIES THAT I HELPED TO CREATE THEIR TECH</h2>
                       <div class="projects-grid">
                           <div class="project-card">
-                              <img src="saayahealth-logo.png" alt="Saayahealth Logo">
+                              <img src="./facelift_logo.webp" alt="Saayahealth Logo">
                               <div class="project-title">Saayahealth</div>
                               <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
                               <a href="#" class="project-button">Visit Website</a>
