--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                       font-family: Arial, sans-serif;
                       margin: 0;
                       padding: 0;
-                      background-color: #1a1a2e;
+                      background-color: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       color: #ffffff;
                   }
 
