--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   }
 
                   .project-card {
-                      background-color: #212946;
+                      background-color: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       border-radius: 10px;
                       overflow: hidden;
                       padding: 20px;
