--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                       font-family: Arial, sans-serif;
                       margin: 0;
                       padding: 0;
+                      background: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       background-color: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       color: #ffffff;
                   }
@@ -240,6 +241,7 @@
                   }
 
                   .project-card {
+                      background: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       background-color: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       border-radius: 10px;
                       overflow: hidden;
