adding projects section

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                   }
 
                   .project-card {
+                      background: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       background-color: linear-gradient(135deg, rgb(255, 99, 132), rgb(75, 0, 130));
                       border-radius: 10px;
                       overflow: hidden;
