--- a/index.html
+++ b/index.html
@@ -325,6 +325,24 @@
                               <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
                               <a href="#" class="project-button">Visit Website</a>
                           </div>
+                          <div class="project-card">
+                              <img src="nextu-logo.png" alt="Nextu Logo">
+                              <div class="project-title">Nextu</div>
+                              <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+                              <a href="#" class="project-button">Visit Website</a>
+                          </div>
+                          <div class="project-card">
+                              <img src="nextu-logo.png" alt="Nextu Logo">
+                              <div class="project-title">Nextu</div>
+                              <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+                              <a href="#" class="project-button">Visit Website</a>
+                          </div>
+                          <div class="project-card">
+                              <img src="nextu-logo.png" alt="Nextu Logo">
+                              <div class="project-title">Nextu</div>
+                              <div class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+                              <a href="#" class="project-button">Visit Website</a>
+                          </div>
                       </div>
                   </div>
               </body>
