--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@
                       color: #cccccc;
                       margin-bottom: 20px;
                   }
-                  .rounded-img {
-                          border-radius: 15px; /* Adjust the value for more or less rounding */
-                      }
 
                   .project-button {
                       background-color: #6c63ff;
@@ -361,6 +358,11 @@
                               <div class="project-description">It’s an app about virtual procedures to identify a disabled child and to provide them with an environment where they can overcome their disability.</div>
                               <a href="#" class="project-button">See details</a>
                           </div>
+                          <style>
+                              .rounded-img {
+                                  border-radius: 15px; /* Adjust the value for more or less rounding */
+                              }
+                          </style>
                       </div>
                   </div>
               </body>
