adding projects section

--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
             </div>
           </section>
           
-          <section class="colorlib-experience no-print" data-section="repos">
+          <div class="about-desc">
           <h1>
             Big <span style="color: #7f52ff">Projects</span>
           </h1>
-          </section>
+        </div>
               <style>
                   body {
                       font-family: Arial, sans-serif;
