adding projects section

--- a/index.html
+++ b/index.html
@@ -202,12 +202,16 @@
               </ul>
             </div>
           </section>
-          
+          <div
+            class="row row-bottom-padded-sm animate-box"
+            data-animate-effect="fadeInLeft"
+          >
           <div class="about-desc">
           <h1>
             Big <span style="color: #7f52ff">Projects</span>
           </h1>
         </div>
+          </div>
               <style>
                   body {
                       font-family: Arial, sans-serif;
