--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
               </ul>
             </div>
           </section>
+          <div class="colorlib-narrow-content">
           <div
             class="row row-bottom-padded-sm animate-box"
             data-animate-effect="fadeInLeft"
@@ -211,6 +212,7 @@
             Big <span style="color: #7f52ff">Projects</span>
           </h1>
         </div>
+          </div>
           </div>
               <style>
                   body {
