adding projects section

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </h1>
           <body>
               <div class="projects-container">
-                  <h2>SOME STARTUPS AND COMPANIES THAT I HELPED TO CREATE THEIR TECH</h2>
+                  <h2 style="color: #FFFFFF;">SOME STARTUPS AND COMPANIES THAT I HELPED TO CREATE THEIR TECH</h2>
                   <div class="projects-grid">
                       <div class="project-card">
                           <img src="./projects/facelift_logo.webp" alt="Facelift cloud" class="rounded-img" width="200" height="100">
