adding projects section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <li style="color: #ffffff;">
                   <a href="#" data-nav-section="repos">Top Repositories</a>
                 </li>
+                <li style="color: #ffffff;">
+                  <a href="#" data-nav-section="projects">Projects</a>
+                </li>
                 <li style="color: #ffffff;"><a href="#" data-nav-section="blogs">Blogs</a></li>
                 <li style="color: #ffffff;">
                   <a href="#" data-nav-section="experience">Work Experience</a>
@@ -202,6 +205,7 @@
               </ul>
             </div>
           </section>
+          <section class="colorlib-experience no-print" data-section="projects">
           <div class="colorlib-narrow-content">
           <div
             class="row row-bottom-padded-sm animate-box"
@@ -271,6 +275,7 @@
         </div>
           </div>
           </div>
+          </section>
               <style>
                   body {
                       font-family: Arial, sans-serif;
